// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseHermesStack bytecode location 1`] = `
Object {
  "entries": Array [
    Object {
      "functionName": "global",
      "location": Object {
        "line1Based": 1,
        "sourceUrl": "unknown",
        "type": "BYTECODE",
        "virtualOffset0Based": 9,
      },
      "type": "FRAME",
    },
    Object {
      "functionName": "foo$bar",
      "location": Object {
        "line1Based": 10,
        "sourceUrl": "/js/foo.hbc",
        "type": "BYTECODE",
        "virtualOffset0Based": 1234,
      },
      "type": "FRAME",
    },
  ],
  "message": "TypeError: undefined is not a function",
}
`;

exports[`parseHermesStack ignore frames that are part of message 1`] = `
Object {
  "entries": Array [
    Object {
      "functionName": "foo$bar",
      "location": Object {
        "column1Based": 1234,
        "line1Based": 10,
        "sourceUrl": "/js/foo.js",
        "type": "SOURCE",
      },
      "type": "FRAME",
    },
  ],
  "message": "The next line is not a stack frame
    at bogus (filename:1:2)
    but the real stack trace follows below.",
}
`;

exports[`parseHermesStack skipped frames 1`] = `
Object {
  "entries": Array [
    Object {
      "functionName": "global",
      "location": Object {
        "column1Based": 9,
        "line1Based": 1,
        "sourceUrl": "unknown",
        "type": "SOURCE",
      },
      "type": "FRAME",
    },
    Object {
      "count": 50,
      "type": "SKIPPED",
    },
    Object {
      "functionName": "foo$bar",
      "location": Object {
        "column1Based": 1234,
        "line1Based": 10,
        "sourceUrl": "/js/foo.js",
        "type": "SOURCE",
      },
      "type": "FRAME",
    },
  ],
  "message": "TypeError: undefined is not a function",
}
`;

exports[`parseHermesStack source location 1`] = `
Object {
  "entries": Array [
    Object {
      "functionName": "global",
      "location": Object {
        "column1Based": 9,
        "line1Based": 1,
        "sourceUrl": "unknown",
        "type": "SOURCE",
      },
      "type": "FRAME",
    },
    Object {
      "functionName": "foo$bar",
      "location": Object {
        "column1Based": 1234,
        "line1Based": 10,
        "sourceUrl": "/js/foo.js",
        "type": "SOURCE",
      },
      "type": "FRAME",
    },
  ],
  "message": "TypeError: undefined is not a function",
}
`;
